[package]
name = "button_clicker"
version = "0.1.0"
edition = "2024"
authors = ["Alex Olemans <alex@tanukii.dev>"]

[profile.release]
opt-level = 3
lto = true
# codegen-units = 1
strip = false

[dependencies]
futures = "0.3.31"
mongodb = "3.2.1"
poise = "0.6.1"
readable = "0.16.0"
ron = "0.8.1"
serde = {version = "1.0.218", features = ["derive"] }
serenity = { version = "0.12.4", features = ["tokio_task_builder"] }
sysinfo = "0.33.1"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19" }
